--- a/xmliter.ipynb
+++ b/xmliter.ipynb
@@ -20,17 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sortchildrenby(parent, attr):\n",
+    "    parent[:] = sorted(parent, key=lambda child: child.get(attr))\n",
     "tree=et.parse(\"Lydiapro.xml\")\n",
     "root=tree.getroot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +56,7 @@
        "653"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,21 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "682"
+       "653"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "l=[]\n",
     "for p in l:\n",
     "    et.SubElement(shape,\"row\",p)\n",
     "s=0\n",
@@ -94,24 +97,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree.write('lt.xml')"
+    "sortchildrenby(root[1][0][4], 'name')\n",
+    "tree.write('ltAPro.xml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'A_1': '0', 'A_2': '0', 'B': '100', 'B_2': '0', 'DIM1': '100', 'DIM2': '100', 'DIM3': '0', 'EA': '6', 'ES': '8', 'ES_2': '0', 'GAMMA': '0', 'GAP': '0', 'H': '100', 'HAS_MATS': 'false', 'ID': '2345', 'IOMEGA': '0', 'IS_THIN': 'false', 'IX': '40181,3333', 'IY': '3780000', 'IYb': '3830000', 'IYn': '3830000', 'IZ': '1340000', 'MASS': '16,9', 'MATERIALS': '', 'MSY': '87597,54', 'MSZ': '41205,29', 'NAME': 'HW', 'NAME1': 'HW 100x100', 'NAME_REVIT': 'HW100x100', 'P1_L': '0', 'P1_T': '0', 'P2_L': '0', 'P2_T': '0', 'P3_L': '0', 'P3_T': '0', 'P4_L': '0', 'P4_T': '0', 'POINTS': '', 'RA': '8', 'RS': '0', 'SHAPE_TYPE': '13', 'SHEAR_QY': '0', 'SHEAR_QZ': '0', 'SURF': '0,574', 'SX': '2158', 'SY': '1600', 'SYMBOL': '', 'SZ': '600', 'TORS': '5022,67', 'VPY': '50', 'VPZ': '50', 'VY': '50', 'VZ': '50'}\n",
-      "{'A_1': '0', 'A_2': '0', 'B': '100', 'B_2': '0', 'DIM1': '100', 'DIM2': '100', 'DIM3': '0', 'EA': '6', 'ES': '8', 'ES_2': '0', 'GAMMA': '0', 'GAP': '0', 'H': '100', 'HAS_MATS': 'FALSE', 'ID': '2345', 'IOMEGA': '0', 'IS_THIN': 'FALSE', 'IX': '40181.3333', 'IY': '3781227', 'IYb': '3781226.89', 'IYn': '3781226.89', 'IZ': '1341410.257', 'MASS': '16.9', 'MATERIALS': '', 'MSY': '84184', 'MSZ': '40756', 'NAME': 'HW', 'NAME1': 'HW 100x100x0', 'NAME_REVIT': 'HW 100x100x0', 'P1_L': '0', 'P1_T': '0', 'P2_L': '0', 'P2_T': '0', 'P3_L': '0', 'P3_T': '0', 'P4_L': '0', 'P4_T': '0', 'POINTS': '', 'RA': '8', 'RS': '0', 'SHAPE_TYPE': '13', 'SHEAR_QY': '0', 'SHEAR_QZ': '0', 'SURF': '0.574', 'SX': '2159', 'SY': '1600', 'SYMBOL': '', 'SZ': '600', 'TORS': '5094.5', 'VPY': '50', 'VPZ': '50', 'VY': '50', 'VZ': '50'}\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'lt.xml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-c52cd79149ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtree1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0met\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lt.xml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mroot1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtree1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetroot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mchild\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mroot1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchild\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ID\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m'2345'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchild\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrib\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\xml\\etree\\ElementTree.py\u001b[0m in \u001b[0;36mparse\u001b[1;34m(source, parser)\u001b[0m\n\u001b[0;32m   1195\u001b[0m     \"\"\"\n\u001b[0;32m   1196\u001b[0m     \u001b[0mtree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mElementTree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1197\u001b[1;33m     \u001b[0mtree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1198\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mtree\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1199\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\xml\\etree\\ElementTree.py\u001b[0m in \u001b[0;36mparse\u001b[1;34m(self, source, parser)\u001b[0m\n\u001b[0;32m    585\u001b[0m         \u001b[0mclose_source\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    586\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"read\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 587\u001b[1;33m             \u001b[0msource\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    588\u001b[0m             \u001b[0mclose_source\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    589\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'lt.xml'"
      ]
     }
    ],
@@ -147,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
